# structured-data-jobs

./: .env.example  .gitignore  Dockerfile  README.md  load_models.py  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
archive/: README.md  docker-compose.yml  place_specific.py  places.py  pyproject.toml
archive/milan_software_companies/: all_software_companies_v20250331_205811.json  milan_software_companies_v20250331_205811_batch_1.json  milan_software_companies_v20250331_205811_batch_10.json  milan_software_companies_v20250331_205811_batch_11.json  milan_software_companies_v20250331_205811_batch_12.json  milan_software_companies_v20250331_205811_batch_13.json  milan_software_companies_v20250331_205811_batch_14.json  milan_software_companies_v20250331_205811_batch_15.json  milan_software_companies_v20250331_205811_batch_16.json  milan_software_companies_v20250331_205811_batch_17.json  milan_software_companies_v20250331_205811_batch_2.json  milan_software_companies_v20250331_205811_batch_3.json  milan_software_companies_v20250331_205811_batch_4.json  milan_software_companies_v20250331_205811_batch_5.json  milan_software_companies_v20250331_205811_batch_6.json  milan_software_companies_v20250331_205811_batch_7.json  milan_software_companies_v20250331_205811_batch_8.json  milan_software_companies_v20250331_205811_batch_9.json  summary_v20250331_205811.json
archive/milan_specific_companies/: all_companies_v20250331_211244.json  all_companies_v20250331_212410.json  google_milan_locations_v20250331_211244.json  google_milan_locations_v20250331_212410.json  satispay_milan_locations_v20250331_211244.json  satispay_milan_locations_v20250331_212410.json  summary_v20250331_211244.json  (+1 more)
(+74 files in other folders)
